--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "scripts": {
+    "test": "jest",
+    "eslint": "eslint --ext .js ./ test/"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^24.1.0"
+  }
 }
